# pda

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LIBTOOL  LICENSE  Makefile  README  config.h.in  configure  doxyfile.in  uncrust.cfg
.github/workflows/: cmake.yml  packages.yml  pda-kernel.yml
arch/linux_x86_uio/: bar_inc.c  device_operator_inc.c  dma_buffer_inc.c  pci_inc.c
include/: pda.h
include/pda/: bar.h  debug.h  defines.h  device_operator.h  dma_buffer.h  pci.h
mk/: Makefile  Makefile.splint  arch_in.files  linux_x86_uio.files  linux_x86_uio.mk  linux_x86_uio.mk.debug
package/dpkg/: control
package/rpm/: Makefile  configure  pda.template
patches/linux_uio/: 90-pda.conf  99-pda.rules  Makefile  Makefile.dkms  Makefile_dma.temp  README  TODO  configure  dkms.conf  pda_kadapter.template  pda_sysfs.sh  uio_pci_dma.c  uio_pci_dma.h
patches/linux_uio/debian/: .gitignore  changelog  control  lintian-overrides  pda-dkms.dkms  pda-dkms.install  pda-kernel-dkms.dkms  postinst  prerm  rules
share/pda/: Makefile  pda_build.mk
share/pda/cmake/: CMakePda.txt  README
src/: bar.c  bar_int.h  debug.c  definitions.h  device_operator.c  dma_buffer.c  dma_buffer_int.h  pci.c  pci_int.h  pciconfigspace.h
test/: Makefile
test/bar_perf/: Makefile  bar_perf.c  run.sh
test/bar_read_write/: Makefile  bar_read_write.c  run.sh
test/buffer/: Makefile  buffer_test.c  run.sh
test/buffer_fork/: Makefile  buffer_fork_test.c
test/buffer_free/: Makefile  buffer_free.c  run.sh
test/buffer_list/: Makefile  buffer_list.c  run.sh
test/buffer_locking/: Makefile  buffer_locking.c  run.sh
test/buffer_reconnect/: Makefile  buffer_reconnect.c  run.sh
test/buffer_wrapmap/: Makefile  buffer_wrapmap.c  run.sh
test/checks/: kmod.c  main.c  numa.c
test/inc/: Makefile  gen_c.sh  run.sh
test/interrupts/: Makefile  interrupt_test.c  run.sh
test/interrupts/kernel/: Makefile  Makefile_dma.temp  interrupt.c  run.sh
test/operator/: Makefile  operator_test.c  run.sh
test/sglist/: Makefile  run.sh  sglist_test.c
tools/scripts/: pda-config
